# OpenSense

./: .gitignore  OpenSense_CalibrateModel.py  OpenSense_OrientationTracking.py  OpenSense_ShowMotion.py  OpenSense_pipeline.py  README.md  imu_capture.py  imu_simulator.py  imu_simulator_2imus.py  json_to_sto.py  model.osim  pyproject.toml  requirements.txt  runOpenSenseCapture.py
Models/: README.md  model_trike_solto.osim
Projects/Experiments/arm/: cal_arm.json
Projects/Experiments/lower_limbs_5imus/: cal_5imus.json  mov_5imus.json
Training/: README.md
Training/Captura/: README.md  motion_capture.py
Training/CinematicaInversa/: imu_simulator_2imus.py  inverse_kinematics.py  mov_arm.json
Training/Tutorial Básico/: README.md
Training/Tutorial Básico/examples/: README.md
Training/TutorialBasico/: README.md
captura_braco_arthur/: cal_arthur.json  cal_arthur.sto  cal_arthur2.sto  mov_arthur.json  mov_arthur2_filtered.sto  mov_arthur_filtered.sto
docs/imagens/: opensim_video.webm
examples/: README.md  joint_angles.py  json_to_sto.py
examples/Rajagopal_OpenSense/: OpenSense_Subject_calibrated_orientations.sto  Rajagopal2015_opensense_calibrated.osim
examples/data/: trike_test_wrong.json
examples/exampleLARA/: example.json  example_filtered_pos.sto  ik_example_filtered_mov.mot  ik_example_mov.mot
lara_opensense/: README.md  __init__.py  file_operations.py  imu_capture.py  imu_class.py  imu_simulator.py  opensense_pipeline.py  segment.py  serial_operations.py
utils/: data_filters.py  file_operations.py  imu_class.py  segment.py  serial_operations.py
(+34 files in other folders)
